--- a/code/dev/parts/keys/edit.html
+++ b/code/dev/parts/keys/edit.html
@@ -60,7 +60,7 @@
             </div>
           </div>
           <!-- TODO: change rule ng-hide on isAdmin (?)-->
-          <div class="form-group" ng-hide="!companies || companies.length == 1"  ng-class="{'has-error': editForm.accountId.$invalid && editForm.accountId.$dirty}">
+          <div class="form-group" ng-if="(auth.isReseller() || auth.isRevadmin()) && showAccountField(key)" ng-hide="!companies || companies.length == 1"  ng-class="{'has-error': editForm.accountId.$invalid && editForm.accountId.$dirty}">
             <label for="account_id" class="col-sm-2 control-label">Account</label>
             <div class="col-sm-10">
                <ui-select ng-model="key.account_id" theme="select2" ng-animate-disabled ng-disabled="_loading" on-select="onAccountSelect($model)" style="min-width: 550px;" id="account_id" name="accountId" required>
