--- a/code/dev/parts/users/edit.html
+++ b/code/dev/parts/users/edit.html
@@ -84,7 +84,7 @@
                 </div>
               </div>
             </div>          
-          <div class="form-group" ng-class="{'has-error': editForm.accountId.$invalid && editForm.accountId.$dirty}" ng-if="auth.isReseller() || auth.isRevadmin()">
+          <div class="form-group" ng-class="{'has-error': editForm.accountId.$invalid && editForm.accountId.$dirty}" ng-if="(auth.isReseller() || auth.isRevadmin()) && showAccountField(model)">
             <label for="company" class="col-sm-2 control-label">Account *</label>
             <div class="col-sm-10">
               <!-- Select only one account. Each user must have one main account.-->
