--- a/code/dev/parts/users/new.html
+++ b/code/dev/parts/users/new.html
@@ -71,7 +71,7 @@
               </div>
             </div>
           </div>
-          <div class="form-group" ng-class="{'has-error': createForm.accountId.$invalid && createForm.accountId.$dirty}" ng-if="auth.isReseller() || auth.isRevadmin()">
+          <div class="form-group" ng-class="{'has-error': createForm.accountId.$invalid && createForm.accountId.$dirty}" ng-if="(auth.isReseller() || auth.isRevadmin()) && showAccountField(model)">
             <label for="company" class="col-sm-2 control-label">Account *</label>
             <div class="col-sm-10">
               <!-- For "admin" and "user" select only one account-->
