--- a/code/dev/parts/keys/list.html
+++ b/code/dev/parts/keys/list.html
@@ -62,6 +62,10 @@
                     <span class="sortorder" ng-show="filter.predicate === 'key'" ng-class="{reverse: filter.key}"></span>
                   </th>
                   <th>
+                    <a href="" ng-click="order('active')">Active</a>
+                    <span class="sortorder" ng-show="filter.predicate === 'active'" ng-class="{reverse: filter.active}"></span>
+                  </th>
+                  <th>
                     <a href="" ng-click="order('updated_at')">Last Update</a>
                     <span class="sortorder" ng-show="filter.predicate === 'updated_at'" ng-class="{reverse: filter.updated_at}"></span>
                   </th>
@@ -96,6 +100,7 @@
                     <input ng-if="item.showKey" ng-blur="switchKeyVisibility(item)" class="form-control api-key" value="{{item.key}}" style="width: 300px; display: inline-block; position: absolute; z-index: 999; margin-left: 4px;"
                       focus-me="item.showKey">
                   </td>
+                  <td><i class="glyphicon {{ item.active ? 'glyphicon-ok-sign text-success' : 'glyphicon-remove text-danger' }}" uib-tooltip="{{ item.active ? 'API Key is active' : 'API Key is inactive' }}"></i></td>
                   <td>{{ getRelativeDate(item.updated_at) }}</td>
                   <!--<td>-->
                   <!--<i class="glyphicon pointer" uib-tooltip="Toggle active status" ng-hide="item.loading" ng-click="toggleProperty(item, 'read_only_status')" ng-class="item.read_only_status && 'glyphicon-check' || 'glyphicon-unchecked'"></i>-->
