--- a/code/dev/parts/shared/permissions/permissions.html
+++ b/code/dev/parts/shared/permissions/permissions.html
@@ -265,6 +265,41 @@
                 No DNS Zones found for this account.
             </span>
         </div>
+        <div class="checkbox-list" style="margin-top: 15px;">
+                <span class="{{model.permissions.dns_analytics.access && hasListInRO('dns_analytics') ? 'bg-dark' : null}}">
+                    <input ng-disabled="readOnly" ng-checked="model.permissions.dns_analytics.access" type="checkbox" name="permissions_dns_analytics"
+                        class="inline-block bg-dark" ng-model="model.permissions.dns_analytics.access"> DNS Analytics
+                    <label for="permissions_dns_analytics" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter"
+                        uib-popover="Allow users to access DNS Analytics.">
+                        <i class="fa fa-question-circle"></i>
+                    </label>
+                </span>
+                <br />
+                <div class="item-list" ng-show="model.permissions.dns_analytics.access && dnsZones && dnsZones.length > 0 && hasListInRO('dns_analytics')">
+                    <span ng-show="(_loading || !dnsZones) && model.permissions.dns_analytics.access" class="loader--waite-company">
+                        <i class="glyphicon glyphicon-refresh spin"></i> Please wait...</span>
+                    <ui-select ng-disabled="readOnly" on-select="addItemToList($select, $item, 'dns_analytics')" on-remove="removeItemFromList($item, 'dns_analytics')"
+                        multiple tagging-tokens="SPACE|," theme="bootstrap" class="form-control inline-block" ng-if="dnsZones && dnsZones.length > 0"
+                        ng-model="model.dns_analytics_list" id="dns_analytics_list ">
+                        <ui-select-match placeholder="Add a DNS Zone to the list...">{{$item.zone}}</ui-select-match>
+                        <ui-select-choices repeat="zone  in  dnsZones | filter: {zone: $select.search}">
+                            {{zone.zone}}
+                        </ui-select-choices>
+                    </ui-select>
+                    <label for="dns_analytics_list" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Add DNS zones to the list to control either to allow access to these DNS zones or deny access">
+                        <i class="fa fa-question-circle"></i>
+                    </label>
+                    <input ng-disabled="readOnly" type="radio" ng-model="model.permissions.dns_analytics.allow_list" ng-checked="model.permissions.dns_analytics.allow_list"
+                        ng-value="true"> Allow access only to zones from this list
+                    <br />
+                    <input ng-disabled="readOnly" type="radio" ng-model="model.permissions.dns_analytics.allow_list" ng-checked="!model.permissions.dns_analytics.allow_list"
+                        ng-value="false"> Deny access only to zones from this list
+                </div>
+                <span class="{{model.permissions.dns_analytics.access ? 'bg-dark' : null}}" style="padding: 10px 10px 10px 20px; margin: 0 0 10px 0;"
+                    ng-show="dnsZones && dnsZones.length === 0 && model.permissions.dns_analytics.access">
+                    No DNS Zones found for this account.
+                </span>
+            </div>
         <div class="checkbox-list" ng-if="auth.isReseller() || auth.isRevadmin()" style="margin-top: 15px;">
             <span class="{{model.permissions.accounts.access && hasListInRO('accounts') ? 'bg-dark' : null}}">
                 <input ng-disabled="readOnly" ng-checked="model.permissions.accounts.access" type="checkbox" name="permissions_accounts"
@@ -304,26 +339,18 @@
             </label>
         </div>
         <div class="col-sm-6">
-            <input ng-disabled="readOnly" ng-checked="model.permissions.ssl_certs" type="checkbox" name="permissions_ssl_certs" class="inline-block"
+            <input ng-disabled="readOnly || model.permissions.domains.access" ng-checked="model.permissions.ssl_certs || model.permissions.domains.access" type="checkbox" name="permissions_ssl_certs" class="inline-block"
                 ng-model="model.permissions.ssl_certs"> SSL Certificates
             <label for="permissions_ssl_certs" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter"
-                uib-popover="Allow users to manage SSL Certs.">
+                uib-popover="Allow users to manage SSL Certs. Cannot be disabled if `Domains Management` is enabled.">
                 <i class="fa fa-question-circle"></i>
             </label>
         </div>
         <div class="col-sm-6">
-            <input ng-disabled="readOnly" ng-checked="model.permissions.waf_rules" type="checkbox" name="permissions_waf_rules" class="inline-block"
+            <input ng-disabled="readOnly || model.permissions.domains.access" ng-checked="model.permissions.waf_rules || model.permissions.domains.access" type="checkbox" name="permissions_waf_rules" class="inline-block"
                 ng-model="model.permissions.waf_rules"> WAF Rules
             <label for="permissions_waf_rules" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter"
-                uib-popover="Allow users to manage WAF Rules.">
-                <i class="fa fa-question-circle"></i>
-            </label>
-        </div>
-        <div class="col-sm-6">
-            <input ng-disabled="readOnly" ng-checked="model.permissions.dns_analytics" type="checkbox" name="permissions_dns_analytics"
-                class="inline-block" ng-model="model.permissions.dns_analytics"> DNS Analytics
-            <label for="permissions_dns_analytics" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter"
-                uib-popover="Allow users to access DNS Analytics.">
+                uib-popover="Allow users to manage WAF Rules. Cannot be disabled if `Domains Management` is enabled.">
                 <i class="fa fa-question-circle"></i>
             </label>
         </div>
