--- a/code/dev/parts/companies/account-resources.html
+++ b/code/dev/parts/companies/account-resources.html
@@ -339,28 +339,36 @@
                 Failed to retrieve a list of resources - please try again later
               </div>
               <!-- <div class="alert alert-info" ng-if="_loading">
-                <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>&nbsp; Loading...
-              </div> -->
+                          <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>&nbsp; Loading...
+                        </div> -->
               <crud-pagination></crud-pagination>
               <table class="table ssl-names--table ">
                 <thead>
                   <tr>
-                    <th><a href="" ng-click="order('ssl_name')">Domain Name</a>
-                      <span class="sortorder" ng-show="filter.predicate === 'ssl_name'" ng-class="{reverse: filter.reverse}"></span></th>
-                    <th><a href="" ng-click="order('verification_method')">Verification Method</a>
-                      <span class="sortorder" ng-show="filter.predicate === 'verification_method'" ng-class="{reverse: filter.reverse}"></span></th>
+                    <th>
+                      <a href="" ng-click="order('ssl_name')">Domain Name</a>
+                      <span class="sortorder" ng-show="filter.predicate === 'ssl_name'" ng-class="{reverse: filter.reverse}"></span>
+                    </th>
+                    <th>
+                      <a href="" ng-click="order('verification_method')">Verification Method</a>
+                      <span class="sortorder" ng-show="filter.predicate === 'verification_method'" ng-class="{reverse: filter.reverse}"></span>
+                    </th>
                     <th>
                       <a href="" ng-click="order('updated_at')">Last Update</a>
                       <span class="sortorder" ng-show="filter.predicate === 'updated_at'" ng-class="{reverse: filter.reverse}"></span>
                     </th>
-                    <th> <a href="" ng-click="order('updated_by')">Updated By</a>
-                      <span class="sortorder" ng-show="filter.predicate === 'updated_by'" ng-class="{reverse: filter.reverse}"></span></th>
+                    <th>
+                      <a href="" ng-click="order('updated_by')">Updated By</a>
+                      <span class="sortorder" ng-show="filter.predicate === 'updated_by'" ng-class="{reverse: filter.reverse}"></span>
+                    </th>
                     <th class="status status--verification">
                       <a href="" ng-click="order('verified')">Verification Status</a>
-                      <span class="sortorder" ng-show="filter.predicate === 'verified'" ng-class="{reverse: filter.reverse}"></span></th>
+                      <span class="sortorder" ng-show="filter.predicate === 'verified'" ng-class="{reverse: filter.reverse}"></span>
+                    </th>
                     <th class="status status--publishing">
                       <a href="" ng-click="order('published')">Publishing Status</a>
-                      <span class="sortorder" ng-show="filter.predicate === 'published'" ng-class="{reverse: filter.reverse}"></span></th>
+                      <span class="sortorder" ng-show="filter.predicate === 'published'" ng-class="{reverse: filter.reverse}"></span>
+                    </th>
                     <!--<th>Actions</th>-->
                     <th class="account" ng-if="auth.isReseller() ||  auth.isRevadmin()">
                       <a href="" ng-click="order('companyName')">Account</a>
@@ -382,15 +390,15 @@
                     </td>
                     <!-- TODO: need rebase template  -->
                     <!--<td class="actions">
-                    <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>
-                    <a href="" ng-class="(item.verified ||isReadOnly())?'disabled':''" ng-disabled="item.verified ||isReadOnly()" ng-if="!item.loading"
-                      uib-tooltip="{{item.verified?'Already Verified':'Verify Domain Control'}}" ng-click="onVerifyDomain($event,item)">
-                      <i class="glyphicon glyphicon-check"></i>
-                    </a>
-                    <a href="" ng-class="(isReadOnly())?'disabled':''" ng-if="!item.loading" ng-click="deleteSSLName(item)" uib-tooltip="Delete SSL Name">
-                      <i class="glyphicon glyphicon-trash"></i>
-                    </a>
-                  </td>-->
+                              <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>
+                              <a href="" ng-class="(item.verified ||isReadOnly())?'disabled':''" ng-disabled="item.verified ||isReadOnly()" ng-if="!item.loading"
+                                uib-tooltip="{{item.verified?'Already Verified':'Verify Domain Control'}}" ng-click="onVerifyDomain($event,item)">
+                                <i class="glyphicon glyphicon-check"></i>
+                              </a>
+                              <a href="" ng-class="(isReadOnly())?'disabled':''" ng-if="!item.loading" ng-click="deleteSSLName(item)" uib-tooltip="Delete SSL Name">
+                                <i class="glyphicon glyphicon-trash"></i>
+                              </a>
+                            </td>-->
                     <td ng-if="auth.isReseller() ||  auth.isRevadmin()">
                       <div>{{item.companyName}}</div>
                     </td>
@@ -401,6 +409,8 @@
               <crud-pagination></crud-pagination>
             </div>
           </section>
+          <!--  ==== WAF Rules ==================================================== -->
+          <section ng-controller="WAFRulesCrudController" class="row accountresources--wafrules" ng-include="'parts/companies/account-resources/account-resources-wafrules.tpl.html'"></section>
           <!-- ==== DNS Zones ============================================= -->
           <section class="row accountresources--dns_zones" ng-controller="DNSZonesCrudController">
             <div class="panel-heading">
@@ -789,9 +799,68 @@
               <crud-pagination></crud-pagination>
             </div>
           </section>
-          <!--  ==== WAF Rules ==================================================== -->
-          <section ng-controller="WAFRulesCrudController" class="row accountresources--wafrules" ng-include="'parts/companies/account-resources/account-resources-wafrules.tpl.html'"></section>
-        </div>
+          <!-- ==== Child Accounts ==================================================== -->
+          <section ng-if="auth.isReseller() || auth.isRevadmin()" class="row accountresources--child-accounts">
+            <div class="panel-heading">
+              <div class="row">
+                <div class="col-sm-12">
+                  <div class="pull-left">
+                    <h2>Child Accounts</h2>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="panel-body">
+              <div class="alert alert-info" ng-if="childAccs.length == 0 && !_loading">
+                Currently the account doesn't have any child accounts
+              </div>
+              <div class="alert alert-warning" ng-if="childAccs == null && !_loading">
+                Failed to retrieve a list of resources - please try again later
+              </div>
+              <crud-pagination></crud-pagination>
+              <table class="table accounts-list">
+                <thead>
+                  <tr>
+                    <th>
+                      <a href="" ng-click="order('company_name')">Company Name</a>
+                      <span class="sortorder" ng-show="filter.predicate === 'company_name'" ng-class="{reverse: filter.reverse}"></span>
+                    </th>
+                    <th>
+                      <a href="" ng-click="order('created_at')">Created At</a>
+                      <span class="sortorder" ng-show="filter.predicate === 'created_at'" ng-class="{reverse: filter.reverse}"></span>
+                    </th>
+                    <th>
+                      <a href="" ng-click="order('created_by')">Created By</a>
+                      <span class="sortorder" ng-show="filter.predicate === 'created_by'" ng-class="{reverse: filter.reverse}"></span>
+                    </th>
+                    <th>
+                      <a href="" ng-click="order('last_update')">Last Update</a>
+                      <span class="sortorder" ng-show="filter.predicate === 'last_update'" ng-class="{reverse: filter.reverse}"></span>
+                    </th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr ng-repeat="acc in childAccs | limitTo:filter.limit:filter.skip track by $index" id="anchor{{::$index}}" ng-click="saveAnchorScrollIndex($index)">
+                    <td>
+                      <a ui-sref=".edit({id: acc.id})" ng-if="!item.loading" uib-tooltip="Edit Account">
+                        {{acc.companyName}}
+                      </a>
+                    </td>
+                    <td>
+                      {{getRelativeDate(acc.created_at)}}
+                    </td>
+                    <td>
+                      {{acc.createdBy}}
+                    </td>
+                    <td>{{getRelativeDate(acc.updated_at)}}</td>                    
+                  </tr>
+                </tbody>
+              </table>
+              <hr>
+              <crud-pagination></crud-pagination>
+            </div>
+          </section>
+          </div>
       </div>
     </div>
   </div>
