Portal UI fixes, invitation workflow fixes

--- a/code/dev/parts/users/new.html
+++ b/code/dev/parts/users/new.html
@@ -198,6 +198,19 @@
             </div>
           </div>
           <hr>
+          <div class="form-group col-sm-12">
+            <div class="col-sm-offset-2 col-sm-4">
+              <div>
+                <strong>The new user account will be created in the system and an invitation message will be sent to the specified email address. 
+                  The new user will need to click on the link provided in the email and finalize the configuration of his user account by configuring a 
+                  strong password for his account. 
+                  If the user’s profile or group permissions are enforcing 2FA protection the user will be forced to enable 
+                  2FA on his first login to the system.
+                </strong>
+              </div>
+            </div>
+          </div>
+          <hr>
           <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
               <a ui-sref="{{state}}" class="btn btn-default" ng-click="clearForm()">
