--- a/code/dev/parts/apps/list.html
+++ b/code/dev/parts/apps/list.html
@@ -66,7 +66,7 @@
             <div class="col-md-12">
               <div class="pull-left form-inline fix-btns">
                 <div class="form-group">
-                  <a ui-sref="{{isReadOnly() ?'.': '.new'}}" class="btn btn-success btn-vendor-new-app" ng-class="{'btn-disabled':isReadOnly()}"
+                  <a ui-sref="{{isReadOnly() ?'.': '.new'}}" class="btn" ng-class="isReadOnly() ? 'btn-disabled': 'btn-success btn-vendor-new-app'"
                     ng-disabled="_loading || isReadOnly()">
                     <i class="glyphicon glyphicon-plus"></i>&nbsp; Add New App
                   </a>
