--- a/code/dev/parts/dashboard/buttons/dashboard-btn-delete.tpl.html
+++ b/code/dev/parts/dashboard/buttons/dashboard-btn-delete.tpl.html
@@ -1,2 +1,2 @@
-<button type="button" ng-click="vm.onDeleteDashboard($event)" ng-disabled="model.isLast" class="btn btn-danger" title="Delete Dashboard">
+<button type="button" ng-if="!vm.isReadOnly()" ng-click="vm.onDeleteDashboard($event)" ng-disabled="model.isLast" class="btn btn-danger" title="Delete Dashboard">
     <i class="glyphicon glyphicon-remove"></i> Delete Dashboard </button>
