--- a/code/dev/parts/invitation/createPassword.html
+++ b/code/dev/parts/invitation/createPassword.html
@@ -30,7 +30,7 @@
             </div>
             <div class="form-group">
               <button ng-disabled="_loading || disableSubmit(loginForm)" type="submit" class="btn btn-primary btn-lg btn-block signin" ng-class="">
-                <i class="glyphicon  " ng-class="_loading ? 'glyphicon-refresh spin': 'glyphicon-log-in'"></i> Create a password
+                <i class="glyphicon  " ng-class="_loading ? 'glyphicon-refresh spin': 'glyphicon-check'"></i> Set Password
               </button>
             </div>
           </div>
