Invitation password set validation extended

--- a/code/dev/parts/invitation/createPassword.html
+++ b/code/dev/parts/invitation/createPassword.html
@@ -11,22 +11,28 @@
           Please choose a password to complete the invitation process.
         </p>
       </div>
-      <form novalidate class="login_form block-center" name="loginForm" ng-submit="createPassword(loginForm)">
+      <form novalidate class="login_form block-center" name="loginForm" ng-model="loginForm" ng-submit="createPassword(loginForm)">
         <div class="block-center">
           <div class="">
             <div class="form-group" ng-class="{'has-error': loginForm.pass.$invalid && loginForm.pass.$dirty}">
               <input type="password" name="pass" placeholder="Password" class="form-control input-lg" ng-disabled="_loading" ng-model="pass"
-                autofocus ng-maxlength="64" required>
+                autofocus ng-maxlength="15" ng-minlength="8" required>
               <div class="error-messages" ng-messages="loginForm.pass.$error" role="alert" ng-messages-multiple>
-                <div ng-messages-include="parts/shared/error-messages.html"></div>
-              </div>
-            </div>
-            <div class="form-group">
-              <input type="password" name="passAgain" placeholder="Repeat Password" class="form-control input-lg" ng-disabled="_loading"
-                ng-model="passAgain" required>
-                <div class="error-messages" ng-messages="loginForm.passAgain.$error" role="alert" ng-messages-multiple>
-                  <div ng-messages-include="parts/shared/error-messages.html"></div>
+                  <div ng-message="minlength" class="alert-text alert-text--minlength">Password must contain at least 8 characters</div>
+                  <div ng-message="maxlength" class="alert-text alert-text--maxlength">Password must contain 15 characters max</div>
                 </div>
+            </div>{{loginForm.passAgain.$error}}
+            <div class="form-group" ng-class="{'has-error': loginForm.passAgain.$invalid && loginForm.passAgain.$dirty}">
+              <input type="password" name="passAgain" placeholder="Repeat Password" class="form-control input-lg" ng-disabled="_loading"
+                ng-model="passAgain" validate-compare-to="pass" ng-minlength="8" ng-maxlength="15" required>
+                <div class="error-messages" ng-messages="loginForm.passAgain.$error" role="alert" ng-messages-multiple>
+                  <div ng-message="minlength" class="alert-text alert-text--minlength">Password must contain at least 8 characters</div>
+                  <div ng-message="maxlength" class="alert-text alert-text--maxlength">Password must contain 15 characters max</div>
+                  <div ng-message="compareTo" class="alert-text alert-text--compareTo">Passwords must match</div>
+                </div>
+            </div>
+            <div class="error-messages" ng-messages="loginForm.passAgain.$error" role="alert" ng-messages-multiple>
+              
             </div>
             <div class="form-group">
               <button ng-disabled="_loading || disableSubmit(loginForm)" type="submit" class="btn btn-primary btn-lg btn-block signin" ng-class="">
